fdo#70861 SwToSfxPageDescAttr: fix call to SvxExtParagraphTabPage

Regression from c2ccd20c0fd92bddfff76447754541705e3eb8f3 (fdo#44689: fix
for specific case of page restart-value 0, 2013-08-29), the problem was
that commit refactored starting page number handling, so that '0' is now
also a valid value, and no longer means "no restart". However cui isn't
updated yet, so always pass a 0 to it, like we used to do so before,
that's better than a crash.

Change-Id: I2adab43499bcdd5234da3f26559b0b384e533c2e